kubernetes/kpt/bitwarden/bitwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden-ingress
  namespace: bitwarden
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - bitwarden.lester.network
    secretName: bitwarden-tls
  rules:
  - host: bitwarden.lester.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bitwarden
            port: 
              number: 80
